src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__function_with_parameters_called_in_program.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i32 }

@prg_instance = global %prg zeroinitializer

define i32 @foo(i32 %0) {
entry:
  %foo = alloca i32, align [filtered]
  %bar = alloca i32, align [filtered]
  store i32 %0, i32* %bar, align [filtered]
  store i32 0, i32* %foo, align [filtered]
  store i32 1, i32* %foo, align [filtered]
  %foo_ret = load i32, i32* %foo, align [filtered]
  ret i32 %foo_ret
}

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %call = call i32 @foo(i32 2)
  store i32 %call, i32* %x, align [filtered]
  ret void
}
