src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__global_variable_reference_is_generated.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: function
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i16 }

@gX = global i16 0
@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  store i16 20, i16* @gX, align [filtered]
  %load_gX = load i16, i16* @gX, align [filtered]
  store i16 %load_gX, i16* %x, align [filtered]
  ret void
}
