src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__if_elsif_else_generator_test.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i32, i32, i32, i32, i8, i8, i8 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %y = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %z = getelementptr inbounds %prg, %prg* %0, i32 0, i32 2
  %u = getelementptr inbounds %prg, %prg* %0, i32 0, i32 3
  %b1 = getelementptr inbounds %prg, %prg* %0, i32 0, i32 4
  %b2 = getelementptr inbounds %prg, %prg* %0, i32 0, i32 5
  %b3 = getelementptr inbounds %prg, %prg* %0, i32 0, i32 6
  %load_b1 = load i8, i8* %b1, align [filtered]
  %1 = icmp ne i8 %load_b1, 0
  br i1 %1, label %condition_body, label %branch

condition_body:                                   ; preds = %entry
  %load_x = load i32, i32* %x, align [filtered]
  br label %continue

branch:                                           ; preds = %entry
  %load_b2 = load i8, i8* %b2, align [filtered]
  %2 = icmp ne i8 %load_b2, 0
  br i1 %2, label %condition_body2, label %branch1

condition_body2:                                  ; preds = %branch
  %load_y = load i32, i32* %y, align [filtered]
  br label %continue

branch1:                                          ; preds = %branch
  %load_b3 = load i8, i8* %b3, align [filtered]
  %3 = icmp ne i8 %load_b3, 0
  br i1 %3, label %condition_body3, label %else

condition_body3:                                  ; preds = %branch1
  %load_z = load i32, i32* %z, align [filtered]
  br label %continue

else:                                             ; preds = %branch1
  %load_u = load i32, i32* %u, align [filtered]
  br label %continue

continue:                                         ; preds = %else, %condition_body3, %condition_body2, %condition_body
  ret void
}
