src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__if_generator_test.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i32, i8 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %b1 = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %load_b1 = load i8, i8* %b1, align [filtered]
  %1 = icmp ne i8 %load_b1, 0
  br i1 %1, label %condition_body, label %continue

condition_body:                                   ; preds = %entry
  %load_x = load i32, i32* %x, align [filtered]
  br label %continue

continue:                                         ; preds = %condition_body, %entry
  ret void
}
