src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__if_with_expression_generator_test.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i32, i8 }

@prg_instance = global %prg zeroinitializer

define void @prg(ptr %0) {
entry:
  %x = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 0
  %b1 = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 1
  %load_x = load i32, ptr %x, align [filtered]
  %tmpVar = icmp sgt i32 %load_x, 1
  %1 = zext i1 %tmpVar to i8
  %2 = icmp ne i8 %1, 0
  %load_b1 = load i8, ptr %b1, align [filtered]
  %3 = icmp ne i8 %load_b1, 0
  %4 = or i1 %2, %3
  %5 = zext i1 %4 to i8
  %6 = icmp ne i8 %5, 0
  br i1 %6, label %condition_body, label %continue

condition_body:                                   ; preds = %entry
  %load_x1 = load i32, ptr %x, align [filtered]
  br label %continue

continue:                                         ; preds = %condition_body, %entry
  ret void
}
