src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__inline_structs_are_generated.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

%__global_x = type { i32, i32 }

@x = global %__global_x zeroinitializer
@____global_x__init = unnamed_addr constant %__global_x zeroinitializer

