src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__inlined_array_size_from_local_scoped_constants.snap
---
source: src/codegen/tests/code_gen_tests.rs
assertion_line: 2590
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%aaa_interface = type { i16, i16, [5 x i8], [3 x i8] }

@a = unnamed_addr constant i16 0
@b = unnamed_addr constant i16 2
@c = unnamed_addr constant i16 5
@aaa_instance = global %aaa_interface { i16 3, i16 7, [5 x i8] zeroinitializer, [3 x i8] zeroinitializer }

define void @aaa(%aaa_interface* %0) {
entry:
  %a = getelementptr inbounds %aaa_interface, %aaa_interface* %0, i32 0, i32 0
  %b = getelementptr inbounds %aaa_interface, %aaa_interface* %0, i32 0, i32 1
  %arr = getelementptr inbounds %aaa_interface, %aaa_interface* %0, i32 0, i32 2
  %arr2 = getelementptr inbounds %aaa_interface, %aaa_interface* %0, i32 0, i32 3
  ret void
}

