src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__method_codegen_return.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define void @MyClass(ptr %0) {
entry:
  ret void
}

define signext i16 @MyClass__testMethod(ptr %0, i16 signext %1) {
entry:
  %MyClass.testMethod = alloca i16, align [filtered]
  %myMethodArg = alloca i16, align [filtered]
  store i16 %1, ptr %myMethodArg, align [filtered]
  store i16 0, ptr %MyClass.testMethod, align [filtered]
  store i16 1, ptr %MyClass.testMethod, align [filtered]
  %MyClass__testMethod_ret = load i16, ptr %MyClass.testMethod, align [filtered]
  ret i16 %MyClass__testMethod_ret
}
