src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__method_codegen_void.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define void @MyClass(ptr %0) {
entry:
  ret void
}

define void @MyClass__testMethod(ptr %0, i16 signext %1) {
entry:
  %myMethodArg = alloca i16, align [filtered]
  store i16 %1, ptr %myMethodArg, align [filtered]
  %myMethodLocalVar = alloca i16, align [filtered]
  store i16 0, ptr %myMethodLocalVar, align [filtered]
  store i16 1, ptr %myMethodLocalVar, align [filtered]
  ret void
}
